[package]
name = "unfair_advantage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bevy = "0.6"
bevy_egui = "0.11"
bevy_prototype_debug_lines = "0.6.1"
bevy_rapier2d = "0.12.1"
futures-lite = "1.12.0"
indoc = "1.0"
instant = "0.1"
itertools = "0.10.3"
keyframe = "1.0"
nalgebra = "0.30.1"
pathfinding = "3.0.10"
rand = "0.8"
toml = "0.5"

[features]
default = ["bevy/dynamic", "bevy/wayland"]
wasm = ["instant/stdweb"]

[patch.crates-io]
bevy = { git = 'https://github.com/Dzejkop/bevy.git' }
